--- a/parenting.qmd
+++ b/parenting.qmd
@@ -8,6 +8,7 @@ format:
       narrative-background-color-overlay: grey
       narrative-background-color-sidebar: white
       section-background-color: white
+    css: parenting.css
 filters:
   - social-share
 share:
@@ -31,7 +32,7 @@ Parents raise their children in a variety of ways.
 :::
 
 :::{focus-on="cr-positiveparenting" pan-to="0%,0%"  scale-by="1.1"}
-The objective of this study was to test the associations between 11 caregiver aggressive and nonaggressive discipline behaviors and outcomes (aggression, distraction, and prosocial peer relations) of children under 5 in low- and middle-income countries (LMICs). 
+The objective of this study was to test the associations between 11 caregiver aggressive and nonaggressive discipline behaviors and outcomes (aggression and prosocial peer relations) of children under 5 in low- and middle-income countries (LMICs). 
 :::
 
 :::{#cr-positiveparenting}
