--- a/be-less-wrong/be-less-wrong.qmd
+++ b/be-less-wrong/be-less-wrong.qmd
@@ -17,6 +17,10 @@ bibliography: be-less-wrong.bib
 
 :::{.cr-section}
 
+:::{#cr-martinbaro}
+> "What we see and how we see is of course determined by our perspective, by the place from which we begin our examination of history; but it is determined also by reality itself." [@Martin-Baro1994B]
+:::
+
 :::{focus-on="cr-earth" pan-to="0%,0%"  scale-by="1"}
 Across the globe, there are definite concrete *realities* of abuse, neglect, suffering, exploitation, violence, discrimination, and other associated problems that we are trying to understand, and to reduce. 
 :::
@@ -27,10 +31,6 @@ Across the globe, there are definite concrete *realities* of abuse, neglect, suf
 
 :::{focus-on="cr-martinbaro" scale-by="1"}
 We hope that our research will inform efforts to change these *realities*. Yet, at the same time we must recognize that our understandings are at best *iterative* and *contingent.* While we will never have a perfect understanding of social reality, we can always improve our understandings, and move in the direction of being *less wrong*.
-:::
-
-:::{#cr-martinbaro}
-> "What we see and how we see is of course determined by our perspective, by the place from which we begin our examination of history; but it is determined also by reality itself." [@Martin-Baro1994B]
 :::
 
 :::{focus-on="cr-silverman" scale-by="1"}
@@ -49,9 +49,24 @@ This recalls the famous saying by the statistician George Box about statistical 
 > "In general, when building statistical models, we must not forget that the aim is to understand something about the real world. Or predict, choose an action, make a decision, summarize evidence, and so on, but always about the real world, not an abstract mathematical world: our models are not the reality—a point well made by George Box in his oft-cited remark that 'all models are wrong, but some are useful' (Box, 1979 in @MR0554183)." [@Hand2014]
 :::
 
+:::{focus-on="cr-box2" scale-by="1"}
 A key task then, of using quantitative methods is to use them to try to be progressively *less wrong* about the answers we are finding to important questions about improving human wellbeing. 
+:::
 
+:::{#cr-box2}
+> "All models are wrong, but some are useful." (Box 1979)
+:::
+
+:::{focus-on="cr-flowchart" scale-by="3"}
 Let's consider some simple visual models based upon some simulated data. Two key variables in this model are *intervention* (a treatment or program that we hope does some good), and the *outcome* (an improved or beneficial mental health or psychological outcome).
+:::
+
+:::{#cr-flowchart}
+```{mermaid}
+flowchart LR
+  intervention(intervention) --> outcome(outcome)
+```
+:::
 
 ```{r}
 
@@ -86,7 +101,6 @@ mydata <- data.frame(intervention, group, outcome)
 
 ```
 
-
 ```{r}
 
 p0 <- ggplot(mydata,
@@ -109,6 +123,7 @@ Here is a first model. What do these results say about the relationship of the *
 :::{#cr-p0}
 ```{r}
 #| label: fig-p0
+#| message: false
 
 p0 + # replay
   labs(title = "A Simple Model of The Data",
@@ -126,14 +141,18 @@ These simple straightforward results suggest that the *intervention* is associat
 ::: {.callout-important appearance="simple"}
 ## The Intervention is *Not* Recommended
 
-Based upon these results we would *not* recommend using this intervention.  
+Based upon these results we would *not* recommend using this intervention.
 :::
 :::
 
+:::{focus-on="cr-p0-group" scale-by="1"}
 Let's now consider a slightly more complex model. In addition to examining the *intervention* and the *outcome*, we account for the fact that individuals come from different *groups*. This could be any kind of group, e.g. a racial, ethnic, religious, cultural, or economic group. 
+:::
 
+:::{#cr-p0-group}
 ```{r}
 #| label: fig-p0-group
+#| message: false
 
 p0 + 
   aes(color = group) +
@@ -143,6 +162,7 @@ p0 +
 
 
 ```
+:::
 
 ::: {.callout-important appearance="simple"}
 ## The Intervention is Recommended
