Minor content tweaks; added docx

--- a/be-less-wrong/be-less-wrong.bib
+++ b/be-less-wrong/be-less-wrong.bib
@@ -17,6 +17,17 @@
   year = {1998},
 }
 
+@InCollection{Box1979,
+  title = {Robustness in the strategy of scientific
+model building},
+  booktitle = {Robustness in Statistics},
+  editor = {Robert L. Launer and Graham N. Wilkinson},
+  author = {George Box},
+  publisher = {Academic Press, Inc. [Harcourt Brace Jovanovich, Publishers], New York-London},
+  year = {1979},
+  isbn = {0-12-438150-2},
+}
+
 @InCollection{MR0554183,
   title = {Robustness in statistics},
   booktitle = {Proceedings of a {W}orkshop held at the {A}rmy {R}esearch {O}ffice, {R}esearch {T}riangle {P}ark, {N}.{C}., {A}pril 11--12, 1978},
